# dross

./: CLAUDE.md  CONCEPT.md  Makefile  README.md
docs/: notes-CLAUDE.md
dross-bot/: .gitignore  Makefile  go.mod  go.sum  main.go  main_test.go  mcp.go  mcp_test.go  outbound.go  proposal.go  proposal_test.go  web.go  web_test.go
dross-mcp/: CHANGELOG.md  Makefile  README.md  dross-mcp.cabal
dross-mcp/app/: Main.hs
dross-mcp/db/: schema.sql
dross-mcp/src/Dross/: Chunk.hs  Embed.hs  Git.hs  Index.hs  Tools.hs
dross-mcp/src/Dross/Mcp/: Protocol.hs  Server.hs
dross-mcp/src/Dross/Org/: Edit.hs  Parser.hs  Types.hs
dross-mcp/test/: Spec.hs
proactive/: README.md  run-job.sh
proactive/prompts/: digest.md  gardening.md  synthesis.md
