cabal-version:      3.14
name:               dross-mcp
version:            0.1.0.0
synopsis:           MCP server for the Dross note archive
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Matthew Farrell
maintainer:         farrellm@alum.mit.edu
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

-- relude replaces the Prelude via mixins (its recommended wiring: no
-- NoImplicitPrelude, no `import Relude` in modules). Only Relude and
-- Relude.Extra are exposed -- Relude.Unsafe is deliberately left out, so
-- importing it is a compile error rather than a rule to remember.
common shared
    ghc-options:      -Wall
    build-depends:
        base ^>=4.21.2.0,
        relude ^>=1.2.2.2
    mixins:
        base hiding (Prelude),
        relude (Relude as Prelude, Relude.Extra)
    default-language: GHC2024

library
    import:           shared
    hs-source-dirs:   src
    exposed-modules:
        Dross.Org.Types
        Dross.Org.Parser
        Dross.Org.Edit
        Dross.Chunk
        Dross.Embed
        Dross.Git
        Dross.Index
        Dross.Mcp.Protocol
        Dross.Mcp.Server
        Dross.Tools
    build-depends:
        aeson >=2.1,
        bytestring,
        containers,
        cryptohash-sha256,
        directory,
        filepath,
        http-client >=0.7,
        http-client-tls >=0.3,
        http-types,
        megaparsec >=9.5,
        postgresql-simple >=0.7,
        process,
        text >=2.0,
        time,
        uuid >=1.3

executable dross-mcp
    import:           shared
    main-is:          Main.hs
    build-depends:
        directory,
        dross-mcp,
        text
    hs-source-dirs:   app

test-suite dross-mcp-test
    import:           shared
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    hs-source-dirs:   test
    build-depends:
        containers,
        dross-mcp,
        text
